# room237

./: README.md  next.config.js  package.json  tsconfig.json
.github/workflows/: publish.yml
public/: manifest.json  sw.js
src/: global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  lib.rs  settings.rs  util.rs
src-tauri/src/clipboard/: linux.rs  macos.rs  windows.rs
src/app/: layout.tsx  page.tsx
src/components/: advanced-settings.tsx  album-item.tsx  app-shell.tsx  controls.tsx  duplicates-view.tsx  lock-overlay.tsx  masonry-media.tsx  media-grid-header.tsx  media-grid.tsx  media-item.tsx  media-scroller.tsx  media-viewer.tsx  selection-menu.tsx
src/components/grid/: masonry-grid.tsx
src/components/media-grid-header/: album-actions.tsx  favorites-filter.tsx
src/components/media-item/: index.tsx  media-extras.tsx  media-item-inner.tsx
src/components/media-item/context-menu/: change-date.tsx  copy-image.tsx  copy-path.tsx  delete.tsx  index.tsx  move-to-album.tsx  reveal-in.tsx
src/components/sidebar/: album-list.tsx  bottom-left-helpers.tsx  directory-picker.tsx  new-album-button.tsx
src/components/ui/: button.tsx  context-menu.tsx  date-time-picker.tsx  kbd.tsx  media-grid-header.tsx  scroll-area.tsx
src/components/viewer/: media-viewer.tsx
src/lib/: metadata-manager.ts  utils.ts  utils.tsx
src/lib/context/: gallery-context.ts  gallery-provider.tsx
src/lib/fs/: albumService.ts  imageService.ts
src/lib/hooks/: use-albums.ts  use-drag-drop.ts  use-keyboard-shortcuts.ts  use-lockscreen.ts  use-media-watcher.ts  use-media.ts  use-root-dir.ts  use-selection.ts  use-sorted-media.ts  use-store-persistence.ts  use-supports.ts  use-upload.ts  use-viewer.ts
src/lib/i18n/: translations.ts
src/lib/settings/: schema.ts
src/lib/stores/: persistence.ts  types.ts
src/lib/stores/slices/: albums.ts  ui.ts
src/lib/types/: index.ts
src/styles/: globals.css
