[package]
name = "app"
version = "0.1.0"
description = "Lightweight offline photo manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [ "macos-private-api", "protocol-asset"] }
tauri-plugin-log = "2.7"
tauri-plugin-fs = { version = "2.4", features = ["watch"] }
tauri-plugin-dialog = "2.4"
ffmpeg-sidecar = "2.0.0"
chrono = "0.4.41"
tauri-plugin-store = "2.4"
rayon = "1.10"
exif = { package = "kamadak-exif", version = "0.6" }
once_cell = "1.21.3"
tauri-plugin-process = "2.3"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.98"
img_hash = "3.2.0"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png", "webp"] }
hex = "0.4.3"
sha2 = "0.10.9"
libc = "0.2"
base64 = "0.22.1"
tauri-plugin-opener = "2"
url = "2.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9"

[target.'cfg(target_family = "unix")'.dependencies]
xattr = "1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.9"
wl-clipboard-rs = "0.9"
